(Palette picker) Fix bug: .scrollbar class not being applied on first render
hasScrollbar was a useRef object so when it changed, the page didn't re-render.
It started as false and when its value was set, the className value didn't change.

--- a/frontend/src/components/option_menu/palettes/PaletteItem.module.css
+++ b/frontend/src/components/option_menu/palettes/PaletteItem.module.css
@@ -36,10 +36,11 @@
 	white-space: nowrap;
 }
 
+/* #region Scrollable container */
 .scrollable {
 	--scrollbar-width: 0.6rem;
 	--scrollbar-bg-color: transparent;
-	--scrollbar-thumb-color: #777777;
+	--scrollbar-thumb-color: #707070;
 	--scrollbar-thumb-color-hover: #7f7f7f;
 
 	padding-bottom: calc(var(--gap) / 2);
